Document router handling of PoisonPill messages. Fixes #2874
  * Revamped description of Broadcast messages.
  * A few other minor doc edits.
  * Removed border, background colour from literals' CSS,
    so literals with whitespace don't look silly.

--- a/akka-docs/_sphinx/themes/akka/static/docs.css
+++ b/akka-docs/_sphinx/themes/akka/static/docs.css
@@ -171,6 +171,6 @@ strong {color: #1d3c52; }
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
-.pre { padding: 1px 2px; color: #5d8700; background-color: #f3f7e9; border: 1px solid #dee1e2; font-family: Menlo, Monaco, "Courier New", monospace; font-size: 12px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+.pre { color: #5d8700; font-family: Menlo, Monaco, "Courier New", monospace; font-size: 12px; }
 .footer h5 { text-transform: none; }
 
